--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 			<label for="name">Фамилия Имя Отчество</label>
 			<input type="text" id="name">
 			<label for="age">Возраст, лет</label>
-			<input type="text" id="age">
+			<input type="text" id="age" placeholder="от 30 до 65 лет">
 			<div class="radio">
-				<input value="Мужской" id="male" checked name="sex" type="radio">
+				<input value="Мужской" id="male" name="sex" type="radio">
 				<label for="sex">Мужчина</label>
 				<input value="Женский" id="female" name="sex" type="radio">
 				<label for="sex">Женщина</label>
